delete last game